home page added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
             />
         </form>
     </header>
+
+    <!--Inspried by Carpoon Venom on YT-->
+
+    <section class="home container" id="home">
+      <!--Home image-->
+       <img src="the adam project.jpg" alt="home page image">
+       <!--Home text-->
+       <div class="home-text"></div>
+          <h2 class="home-title"></h2>
+          <p>Some text</p>
+        <a href="#" class="watch-btn"></a>
+           <i class="bx bx-right-arrow"></i>
+           <span>Watch the trailers</span>
+    </section>
+
+
   <!-- The main tag where we are going to put all our movies that we got from the API -->
     <main id="main"></main>
 </body>
+
 </html>
